# app/routes/api.php
@@ -1,12 +1,9 @@
 <?php
 
-use Illuminate\Http\Request;
+use App\Http\Controllers\BookingCheckController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\BookingController;
 
-Route::get('/user', function (Request $request) {
-    return $request->user();
-})->middleware('auth:sanctum');
-
 Route::get('/bookings', [BookingController::class, 'index']);
+Route::get('/bookings/check', [BookingCheckController::class, 'check']);
 Route::post('/bookings', [BookingController::class, 'store']);
